Renames + updates from master

--- a/frontend/fragments/try-footer.html
+++ b/frontend/fragments/try-footer.html
@@ -67,17 +67,21 @@ The following styles are available (flat is the default as of Feb 1st 2015):
   <td><code>https://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square</code></td>
   </tr>
   <tr>
+  <td><img src='/badge/style-for--the--badge-green.svg?style=for-the-badge' alt=''/></td>
+  <td><code>https://img.shields.io/badge/style-for--the--badge-green.svg?style=for-the-badge</code></td>
+  </tr>
+  <tr>
   <td><img src='/badge/style-social-green.svg?style=social' alt=''/></td>
   <td><code>https://img.shields.io/badge/style-social-green.svg?style=social</code></td>
   </tr>
 </tbody></table>
 
 <p>
-Here are a few other parameters you can use:
+Here are a few other parameters you can use: (connecting several with "&" is possible)
 </p>
 <table><tbody>
   <tr><td><code>?label=healthinesses</code></td><td>Override the default
-      left-hand-side text</td>
+      left-hand-side text (<a href="https://developer.mozilla.org/en-US/docs/Glossary/percent-encoding">URL-Encoding</a> needed for spaces or special characters!)</td>
   <tr><td><code>?logo=appveyor</code></td>
     <td>
       Insert one of the
@@ -110,12 +114,10 @@ Tell your favorite badge service to use it! <br/>
 And tell us, we might be able to bring it to you anyway!
 </p>
 <p>
-<a href='https://twitter.com/espadrine'><img src='/twitter/follow/espadrine.svg?style=social&label=Follow' alt='Follow @espadrine'></a>
-<a href='https://www.gratipay.com/Shields/'><img src='/gratipay/Shields.svg?style=social&label=Donate' alt='Donate to us!'/></a>
-<iframe src="https://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
-  style="border:0; background-color:transparent"
-  width="95" height="20"></iframe>
-<a href="https://discord.gg/HjJCwm5"><img src='/discord/308323056592486420.svg?style=social&label=Chat' alt='chat on Discord'></a>
+<object data='/twitter/follow/shields_io.svg?style=social&label=Follow' alt='Follow @shields_io'></object>
+<object data='/gratipay/Shields.svg?style=social&label=Donate&link=https://www.gratipay.com/Shields/' alt='Donate to us!'></object>
+<object data='/github/forks/badges/shields.svg?style=social&label=Fork' alt='Fork on GitHub'></object>
+<object data='/discord/308323056592486420.svg?style=social&label=Chat&link=https://discord.gg/HjJCwm5' alt='chat on Discord'></object>
 </p>
 <p>
 <a href='https://github.com/h5bp/lazyweb-requests/issues/150'>This</a>
