--- a/frontend/fragments/badge-examples-old.html
+++ b/frontend/fragments/badge-examples-old.html
@@ -1,6 +1,3 @@
-<div>
-<div>
-
 <h3 id="build"> Build </h3>
 <table class='badge'><tbody>
   <tr><th> Travis: </th>
@@ -99,13 +96,21 @@
     <td><img src='/jenkins/c/https/jenkins.qa.ubuntu.com/view/Utopic/view/All/job/address-book-service-utopic-i386-ci.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/c/https/jenkins.qa.ubuntu.com/view/Utopic/view/All/job/address-book-service-utopic-i386-ci.svg</code></td>
   </tr>
-  <tr><th> Coveralls: </th>
-    <td><img src='/coveralls/jekyll/jekyll.svg' alt=''/></td>
-    <td><code>https://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
+  <tr><th> Coveralls github: </th>
+    <td><img src='/coveralls/github/jekyll/jekyll.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/github/jekyll/jekyll.svg</code></td>
   </tr>
-  <tr><th> Coveralls branch: </th>
-    <td><img src='/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
-    <td><code>https://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
+  <tr><th> Coveralls github branch: </th>
+    <td><img src='/coveralls/github/jekyll/jekyll/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/github/jekyll/jekyll/master.svg</code></td>
+  </tr>
+  <tr><th> Coveralls bitbucket: </th>
+    <td><img src='/coveralls/bitbucket/pyKLIP/pyklip.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/bitbucket/pyKLIP/pyklip.svg</code></td>
+  </tr>
+  <tr><th> Coveralls bitbucket branch: </th>
+    <td><img src='/coveralls/bitbucket/pyKLIP/pyklip.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coveralls/bitbucket/pyKLIP/pyklip/master.svg</code></td>
   </tr>
   <tr><th> SonarQube Coverage: </th>
     <td><img src='/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg' alt=''/></td>
@@ -408,6 +413,14 @@
     <td><img src='/vscode-marketplace/d/ritwickdey.LiveServer.svg' alt=''/></td>
     <td><code>https://img.shields.io/vscode-marketplace/d/ritwickdey.LiveServer.svg</code></td>
   </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/dt/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/dt/notepad4e.svg</code></td>
+  </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/dm/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/dm/notepad4e.svg</code></td>
+  </tr>
   <tr><th data-keywords='jetbrains plugin'> JetBrains plugins: </th>
     <td><img src='/jetbrains/plugin/d/1347-scala.svg' alt=''/></td>
     <td><code>https://img.shields.io/jetbrains/plugin/d/1347-scala.svg</code></td>
@@ -438,9 +451,21 @@
   <td><img src='/npm/v/@cycle/core/canary.svg' alt=''/></td>
   <td><code>https://img.shields.io/npm/v/@cycle/core/canary.svg</code></td>
   </tr>
-  <tr><th> node: </th>
-  <td><img src='/node/v/gh-badges.svg' alt=''/></td>
-  <td><code>https://img.shields.io/node/v/gh-badges.svg</code></td>
+  <tr><th data-keywords='node'> node: </th>
+  <td><img src='/node/v/passport.svg' alt=''/></td>
+  <td><code>https://img.shields.io/node/v/passport.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> node (scoped): </th>
+  <td><img src='/node/v/@stdlib/stdlib.svg' alt=''/></td>
+  <td><code>https://img.shields.io/node/v/@stdlib/stdlib.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> node (tag): </th>
+  <td><img src='/node/v/passport/latest.svg' alt=''/></td>
+  <td><code>https://img.shields.io/node/v/passport/latest.svg</code></td>
+  </tr>
+  <tr><th data-keywords='node'> node (scoped with tag): </th>
+  <td><img src='/node/v/@stdlib/stdlib/latest.svg' alt=''/></td>
+  <td><code>https://img.shields.io/node/v/@stdlib/stdlib/latest.svg</code></td>
   </tr>
   <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='/pypi/v/nine.svg' alt=''/></td>
@@ -637,6 +662,10 @@
     <td><img src='/vscode-marketplace/v/ritwickdey.LiveServer.svg' alt=''/></td>
     <td><code>https://img.shields.io/vscode-marketplace/v/ritwickdey.LiveServer.svg</code></td>
   </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/v/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/v/notepad4e.svg</code></td>
+  </tr>
   <tr><th> Itunes App Store: </th>
     <td><img src='/itunes/v/803453959.svg' alt=''/></td>
     <td><code>https://img.shields.io/itunes/v/BUNDLE_ID.svg</code></td>
@@ -644,6 +673,10 @@
   <tr><th data-keywords='jitpack java maven'> JitPack: </th>
     <td><img src='/jitpack/v/jitpack/maven-simple.svg' alt=''/></td>
     <td><code>https://img.shields.io/jitpack/v/jitpack/maven-simple.svg</code></td>
+  </tr>
+  <tr><th> Jenkins Plugins: </th>
+    <td><img src='/jenkins/plugin/v/blueocean.svg' alt=''/></td>
+    <td><code>https://img.shields.io/jenkins/plugin/v/blueocean.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -908,6 +941,22 @@
     <td><img src='/github/last-commit/google/skia/infra/config.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/commits/google/skia/infra/config/last.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub top language' data-doc='githubDoc'> GitHub top language: </th>
+    <td><img src='/github/languages/top/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/languages/top/badges/shields.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub language count' data-doc='githubDoc'> GitHub language count: </th>
+    <td><img src='/github/languages/count/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/languages/count/badges/shields.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub byte code size' data-doc='githubDoc'> GitHub code size in bytes: </th>
+    <td><img src='/github/languages/code-size/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/languages/code-size/badges/shields.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub repo size' data-doc='githubDoc'> GitHub repo size in bytes: </th>
+    <td><img src='/github/repo-size/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/repo-size/badges/shields.svg</code></td>
+  </tr>
   <tr><th> Bitbucket issues: </th>
     <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg</code></td>
@@ -1095,6 +1144,10 @@
     <td><img src='/vscode-marketplace/r/ritwickdey.LiveServer.svg' alt=''/></td>
     <td><code>https://img.shields.io/vscode-marketplace/r/ritwickdey.LiveServer.svg</code></td>
   </tr>
+  <tr><th data-keywords='eclipse marketplace'> Eclipse Marketplace: </th>
+    <td><img src='/eclipse-marketplace/favorites/notepad4e.svg' alt=''/></td>
+    <td><code>https://img.shields.io/eclipse-marketplace/favorites/notepad4e.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
@@ -1114,6 +1167,10 @@
   <tr><th> David: </th>
     <td><img src='/david/peer/webcomponents/generator-element.svg' alt=''/></td>
     <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+  </tr>
+  <tr><th>.Net Status (GitHub):</th>
+    <td><img src='/dotnetstatus/gh/jaredcnance/dotnet-status/API.svg' alt='' /></td>
+    <td><code>https://img.shields.io/dotnetstatus/gh/jaredcnance/dotnet-status/API.svg</code></td>
   </tr>
   <tr><th> bitHound: </th>
     <td><img src='/bithound/dependencies/github/rexxars/sse-channel.svg' alt=''/></td>
@@ -1187,6 +1244,3 @@
     <td><code>https://img.shields.io/sourcegraph/rrc/github.com/gorilla/mux.svg</code></td>
   </tr>
 </tbody></table>
-
-</div>
-</div>
