--- a/frontend/fragments/try-footer.html
+++ b/frontend/fragments/try-footer.html
@@ -157,9 +157,11 @@ is where the current server got started.
   </p><p><label> Image <input type='url' name='img'/></label>
   </p><p><label> Style
     <select name='style'>
-      <option value='plastic'>          plastic
-      <option value='flat' selected>    flat
-      <option value='flat-square'>      flat-square
+      <option value='plastic'>plastic</option>
+      <option value='flat' selected>flat</option>
+      <option value='flat-square'>flat-square</option>
+      <option value='for-the-badge'>for-the-badge</option>
+      <option value='social'>social</option>
     </select>
   </label>
   </p><p> Markdown
