badge minimum height 20px

--- a/frontend/fragments/try-footer.html
+++ b/frontend/fragments/try-footer.html
@@ -90,7 +90,7 @@ The following styles are available (flat is the default as of Feb 1st 2015):
   <td><code>https://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square</code></td>
   </tr>
   <tr>
-  <td><img src="/badge/style-for--the--badge-green.svg?style=for-the-badge" alt='' style='height:28px;'/></td>
+  <td><img src="/badge/style-for--the--badge-green.svg?style=for-the-badge" alt=''/></td>
   <td><code>https://img.shields.io/badge/style-for--the--badge-green.svg?style=for-the-badge</code></td>
   </tr>
   <tr>
