--- a/frontend/fragments/try-header.html
+++ b/frontend/fragments/try-header.html
@@ -48,7 +48,7 @@ table.badge > tbody > tr > th,
 table.badge > tbody > tr > td > img,
 table.badge > tbody > tr > td > code { cursor: pointer; }
 table.badge > tbody > tr > td > img, .badge-img img, #copyImg {
-  height: 20px;
+  min-height: 20px;
   vertical-align: middle;
 }
 </style>
