Improve search performance
Add a class which applies display: none to badges we don’t want to see. This is accomplished by passing a `shouldDisplay` function along with each badge, which pulls the current query through a closure and applies it.

A bit roundabout, but it works.

The rest of the changes are refactors to avoid code duplication.

I decreased the debouce rate to 50, which seems to work well.

--- a/static/main.css
+++ b/static/main.css
@@ -90,6 +90,10 @@ hr.spacing {
   cursor: pointer;
 }
 
+.excluded {
+  display: none;
+}
+
 .badge-img {
   min-height: 20px;
   vertical-align: middle;
