new badge-json service route: /^\/json\/(https?.+)\.(svg|png|gif|jpg|json)$/ added documentation to usage.js (with json-badge-maker) tweaked usage.js oh-so-slightly to better separate "static", "dynamic", and "json" added "style" parameter to parameter list & moved rendered styles from above the list to below removed the ginormous margin-left: 25% style from ul -> now applies to ul.options   (was only one UL in in documentation) renamed duplicate "miscellaneous" id to "miscellaneous2"

--- a/static/main.css
+++ b/static/main.css
@@ -22,6 +22,9 @@ code,
 input.short {
   width: 5em;
 }
+input.medium {
+  width: 15em;
+}
 
 input {
   text-align: center;
@@ -43,7 +46,7 @@ hr {
   border-width: 1px 0 0 0;
 }
 
-ul {
+ul.options {
   text-align: left;
   margin-left: 25%;
 }
